--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,9 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
+  
+  
   <context-param>
     <param-name>globalPropFile</param-name>
     <param-value>/home/rajeev/database.properties</param-value>
   </context-param>
+  
+  
+    <servlet>
+        <servlet-name>
+            myJsp
+        </servlet-name>
+        <jsp-file>
+            index.jsp
+        </jsp-file>
+
+        <init-param>
+            <param-name>jspParam</param-name>
+            <param-value>this is dummy servlet config param  form web .xml</param-value>
+        </init-param>
+    </servlet>
+  
+   
+  
+  
+  
   <servlet>
     <servlet-name>DemoServlet</servlet-name>
     <servlet-class>com.demo.MyServlet</servlet-class>
